UPDATE: - Fix up jumpy elements in Import Wallet screen

--- a/client/src/components/web-extension/ImportWallet/ImportWallet.scss
+++ b/client/src/components/web-extension/ImportWallet/ImportWallet.scss
@@ -13,6 +13,7 @@
 
 		&--bottom {
 			margin-top: auto;
+			margin-bottom: 0;
 		}
 	}
 
@@ -21,15 +22,14 @@
 			display: flex;
 			flex-direction: column;
 			flex-wrap: wrap;
+			flex: 0 0 auto;
 			height: 280px;
 			justify-content: space-between;
-			margin-right: -20px;
-			padding-left: 10px;
-			padding-right: 10px;
-			flex: 0 0 auto;
-			width: 50%;
 			list-style: none;
+			width: 50%;
+			padding: 0;
 		}
+		
 		&--box {
 			padding: 0 16px;
 		}
@@ -57,6 +57,10 @@
 			flex-flow: column nowrap;
 			justify-content: space-between;
 			height: 100%;
+		}
+
+		&--body {
+			margin-bottom: auto;
 		}
 	}
 }
